[tool.poetry]
name = "suricat-beams-cabs"
version = "0.0.8"
description = "MeerKAT primary beam model handling utilities -- Stimela cabs and recipes"
authors = ["Oleg Smirnov <osmirnov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "suricat/cabs" }, { include = "suricat/recipes" }]

[tool.poetry.dependencies]
python = "^3.8"
stimela = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

